# GraphUnzip

./: .gitignore  MANIFEST.in  README.md  analyse_HiC.py  analyse_coverage_HiC.py  basic_functions.py  check_phasing.py  commands.py  determine_multiplicity.py  environment.yml  evaluate_solution.py  graphunzip.py  input_output.py  interaction_between_contigs.py  link.py  main.py  old_main.py  pyproject.toml  requirements.txt  segment.py  setup.cfg  solve_ambiguities.py  solve_with_HiC.py  solve_with_long_reads.py  tests.py  transform_gfa.py  trash.py
src/graphunzip/: __init__.py  analyse_HiC.py  analyse_coverage_HiC.py  arg_helpers.py  check_phasing.py  clean_graph.py  determine_multiplicity.py  finish_untangling.py  graphunzip.py  input_output.py  interaction_between_contigs.py  purge.py  run_submodules.py  segment.py  solve_ambiguities.py  solve_with_HiC.py  solve_with_long_reads.py  tests.py  transform_gfa.py  trash.py
src/graphunzip/pybam/: README.md  pybam.py
